# findrs

./: Cargo.toml  LICENSE  README.md
src/: findrs_macro.rs  handle_exec.rs  handle_exec_test.rs  main.rs
