[package]
name = "find-rs"
version = "0.1.1"
authors = ["Omar"]
edition = "2021"
description = "find-rs is a simple implementation of the find command in Rust"
license = "MIT"

[[bin]]
name = "findrs"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
colored = "2.1.0"
